lsfusion-dev: dryrun command - full logic validation beside the live server (0.1.28)
Platform 7.0-SNAPSHOT (builds since 2026-07-30 20:39) adds settings.dryRun:
the server compiles and checks the whole logic, then exits before the DB
sync with exit code 0/1. New 'lsfdev.ps1 dryrun [-TopModule M]' wraps it:
shared launch plumbing with start-server (extracted Resolve-LaunchMode /
Report-ProjectLsfFiles / Build-ServerClasspath), separate staging dir so a
live server's classpath is never wiped, jar-level version gate + runtime
real-start guard for older builds, fail-fast diagnosis of unreachable
PostgreSQL (the DB adapter still connects before the cutoff and creates a
missing database empty - measured), -TopModule per-run closure narrowing
(measured 772 -> 11 modules, 9 s -> 4 s). Docs: SKILL.md workflow section,
runtime.md mechanics, lsfusion-eval cross-ref.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>